Closed some memory-leaks

--- a/src/main/resources/text_de.properties
+++ b/src/main/resources/text_de.properties
@@ -536,10 +536,12 @@ RIGHTS.USER                 = Benutzer
 RIGHTS.ISADMIN              = ist Admin?
 RIGHTS.ADMIN                = Admin
 RIGHTS.ADMIN_LIST           = Admins
-RIGHTS.CAN_EDIT             = darf editieren?
+RIGHTS.CAN_EDIT_GROUPS      = darf \u00dcbungsblatt editieren?
+RIGHTS.CAN_EDIT_SCENARIO    = darf Szenario editieren?
 RIGHTS.CAN_ASSERT           = darf bewerten?
 RIGHTS.INSERT               = Eintragen
 RIGHTS.INSERT_RIGHTS        = Neue Rechte einrichten
+RIGHTS.INSERT_INSTRUCTOR    = Neuen Dozent hinzuf\u00fcgen
 RIGHTS.GIVE_RIGHT           = Privileg geben
 RIGHTS.REMOVE_RIGHT         = Privileg entfernen
 RIGHTS.REMOVE_ALL_RIGHTS    = Alle Privilegien entfernen
