Rights management enhancements

--- a/src/main/resources/text_de.properties
+++ b/src/main/resources/text_de.properties
@@ -536,9 +536,11 @@ RIGHTS.USER                 = Benutzer
 RIGHTS.ISADMIN              = ist Admin?
 RIGHTS.ADMIN                = Admin
 RIGHTS.ADMIN_LIST           = Admins
-RIGHTS.CAN_EDIT_GROUPS      = darf \u00dcbungsblatt editieren?
+RIGHTS.INSTRUCTOR           = Dozent
+RIGHTS.INSTRUCTOR_LIST      = Dozenten
+RIGHTS.CAN_EDIT_GROUPS      = darf \u00dcbungsbl\u00e4tter editieren?
 RIGHTS.CAN_EDIT_SCENARIO    = darf Szenario editieren?
-RIGHTS.CAN_ASSERT           = darf bewerten?
+RIGHTS.CAN_ASSERT           = darf Abgaben bewerten?
 RIGHTS.INSERT               = Eintragen
 RIGHTS.INSERT_RIGHTS        = Neue Rechte einrichten
 RIGHTS.INSERT_INSTRUCTOR    = Neuen Dozent hinzuf\u00fcgen
