--- a/src/main/resources/text_de.properties
+++ b/src/main/resources/text_de.properties
@@ -40,7 +40,8 @@ EXERCISE_SHORT              = Aufg.
 EXERCISE_GROUP              = \u00dcbungsblatt
 SCENARIO                    = Szenario
 SAVE                        = Speichern
-DELETE                      = l\u00f6schen
+DELETE                      = L\u00f6schen
+CANCEL                      = Abbrechen
 RATED                       = bewertet
 UNRATED                     = unbewertet
 YES                         = Ja
@@ -49,6 +50,7 @@ COPY                        = KOPIE
 SUCCESS                     = Erfolgreich gespeichert
 ERROR                       = Unerwarteter Fehler, siehe Logdatei.
 FN                          = Spalte f\u00fcr zugeh\u00f6rige Funktionen
+SCENARIO_NOT_FOUND          = FEHLER: Dieses Szenario wurde nicht gefunden.
 
 # ############################################################################
 # error messages
@@ -230,7 +232,6 @@ EDIT_EX.ORIGIN2             = Kopie von \u00dcbungsaufgabe mit ID
 EDIT_EX.EMPTY_QUESTION      = Testfrage ist leer!
 EDIT_EX.EMPTY_CREDITS       = Bitte Schierigkeitsgrad w\u00e4hlen!
 EDIT_EX.EMPTY_SOLUTION      = Bitte mindestens eine Musterl\u00f6sung angeben!
-EDIT_EX.SUCCESS             = Erfolgreich gespeichert
 EDIT_EX.ERROR               = Unerwarteter Fehler, siehe Logdatei.
 EDIT_EX.NO_SYNTAX_ERROR     = Keine Syntaxfehler gefunden
 EDIT_EX.SYNTAX_ERROR        = Fehler in Query
@@ -505,7 +506,7 @@ ASSERTION.DIALOG_LOADING    = Dies kann eine Weile dauern!
 
 # Submission Save-Dialog
 SAVED.SUCCESS               = Erfolgreich gespeichert
-SAVED.FAIL                  = Konte nicht gespeichert werden
+SAVED.FAIL                  = Konnte nicht gespeichert werden
 SAVED.SOLUTION_SUCCESS      = Erfolgreich als Musterl\u00f6sung eingetragen
 SAVED.SOLUTION_FAIL         = L\u00f6sung konnte nicht eingetragen werden
 
@@ -538,6 +539,7 @@ RIGHTS.ADMIN                = Admin
 RIGHTS.ADMIN_LIST           = Admins
 RIGHTS.INSTRUCTOR           = Dozent
 RIGHTS.INSTRUCTOR_LIST      = Dozenten
+RIGHTS.STUDENT              = Student
 RIGHTS.CAN_EDIT_GROUPS      = darf \u00dcbungsbl\u00e4tter editieren?
 RIGHTS.CAN_EDIT_SCENARIO    = darf Szenario editieren?
 RIGHTS.CAN_ASSERT           = darf Abgaben bewerten?
@@ -548,6 +550,15 @@ RIGHTS.GIVE_RIGHT           = Privileg geben
 RIGHTS.REMOVE_RIGHT         = Privileg entfernen
 RIGHTS.REMOVE_ALL_RIGHTS    = Alle Privilegien entfernen
 RIGHTS.USER_NOT_FOUND       = Nutzer nicht gefunden
+RIGHTS.SCENARIO_NOT_FOUND   = Szenario existiert nicht, somit k\u00f6nnen \
+                              auch keine Rechte vergeben werden
+RIGHTS.DELETE_LECTURER      = Dozenten l\u00f6schen?
+RIGHTS.LECTURER_ADDED       = Dozenten erfolgreich hinzugef\u00fcgt
+RIGHTS.LECTURER_REMOVED     = Dozenten erfolgreich gel\u00f6scht.
+RIGHTS.RIGHTS_REMOVED       = Rechte erfolgreich gel\u00f6scht.
+RIGHTS.USER_EXISTS          = Schon vorhanden.
+RIGHTS.GIVEN_BY             = Vergeben von
+RIGHTS.ALREADY_INSERTED     = User "{0}" ist bereits Dozent.
 
 # SqlQueryComparator
 COMPARATOR.SEMANTIC_ERROR   = Semantischer Fehler
