--- a/src/main/resources/text_de.properties
+++ b/src/main/resources/text_de.properties
@@ -3,7 +3,7 @@
 # ************************************************************************
 # ORGANIZATION  :  Institute of Computer Science, University of Wuerzburg
 # PROJECT       :  UEPS - Uebungs-Programm fuer SQL
-# FILENAME      :  text_de.properties
+# FILENAME      :  text_de_temp.properties
 # ************************************************************************
 # %%
 # Copyright (C) 2014 - 2015 Institute of Computer Science, University of Wuerzburg
@@ -11,9 +11,9 @@
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
-# 
+#
 #      http://www.apache.org/licenses/LICENSE-2.0
-# 
+#
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -95,7 +95,7 @@ SESSION.USER                = Angemeldet als:
 
 # session-errors
 SESSION.ERRORTITLE          = Die Session ist abgelaufen!
-SESSION.ERRORLINE           = Loggen Sie sich \u00fcber WueCampus2 ein.
+SESSION.ERRORLINE           = Loggen Sie sich \u00fcber Moodle ein.
 SESSION.FALSE               = Session ung\u00fcltig.
 SESSION.PERMISSION          = Fehlende Rechte
 SESSION.PERMISSION_DETAILS  = Fehlende Rechte. Wenden Sie sich an den Admin.
@@ -220,6 +220,7 @@ ADMINTREE.DOUBLECLICK       = Knoten im resultierendem Baum lassen sich \
 ADMINTREE.EDIT              = Aufgaben bearbeiten
 ADMINTREE.DETAILS           = Rechtsklick \u00f6ffnet das Bearbeitungsmen\u00fc
 ADMINTREE.MENU_ADD          = hinzuf\u00fcgen
+ADMINTREE.NO_SC_EDIT_RIGHT  = Keine Rechte zum hinzuf\u00fcgen
 ADMINTREE.MENU_EDIT         = bearbeiten
 ADMINTREE.MENU_DEL          = l\u00f6schen
 ADMINTREE.MENU_CUT          = ausschneiden
@@ -290,12 +291,15 @@ EDIT_SC.DESCRIPTION         = GRANT USAGE ON *.* TO '<b>user_name</b>'@\
                               `<b>db_name</b>`.* TO  '<b>user_name</b>'@\
                               '<b>db_host</b>';
 EDIT_SC.DROP_USER_TITLE     = Datenbank-Nutzer wieder l\u00f6schen
-EDIT_SC.DROP_USER           = GRANT USAGE ON *.* TO '<b>user_name</b>'@\
-                              '<b>db_host</b>'; DROP USER \
-                              '<b>user_name</b>'@'<b>db_host</b>';\
-                              DELETE FROM mysql.user WHERE \
-                              user='<b>user_name</b>'; DELETE FROM \
-                              mysql.db WHERE user='<b>user_name</b>';
+# EDIT_SC.DROP_USER           = GRANT USAGE ON *.* TO '<b>user_name</b>'@\
+#                               '<b>db_host</b>'; DROP USER \
+#                               '<b>user_name</b>'@'<b>db_host</b>';\
+#                               DELETE FROM mysql.user WHERE \
+#                               user='<b>user_name</b>'; DELETE FROM \
+#                               mysql.db WHERE user='<b>user_name</b>';
+EDIT_SC.DROP_USER           = REVOKE ALL PRIVILEGES, \
+                              GRANT OPTION FROM '<b>user_name</b>'@'<b>db_host</b>'; DROP USER \
+                              '<b>user_name</b>'@'<b>db_host</b>';
 EDIT_SC.SAVE_TOOLTIP        = Nach dem Absenden findet ein \
                               DB-Verbindungstest statt. Es wird jedoch nicht \
                               gepr\u00fcft, ob der Nutzer nur eingeschr\u00e4nkte \
@@ -401,8 +405,7 @@ EDIT_GROUP.TIME_CONFLICT3   = Die Endzeit muss nach folgendem Datum gesetzt werd
 # ############################################################################
 
 # link zum swt-kurs
-# SESSION.WUECAMPUS         = https://wuecampus2.uni-wuerzburg.de/moodle/
-SESSION.WUECAMPUS           = https://wuecampus2.uni-wuerzburg.de/moodle/course/view.php?id=7321
+SESSION.WUECAMPUS         = https://wuecampus2.uni-wuerzburg.de/moodle/
 
 # ############################################################################
 # exercise page - "task.xhtml"
@@ -560,21 +563,22 @@ RIGHTS.USER                 = Benutzer
 RIGHTS.ISADMIN              = ist Admin?
 RIGHTS.ADMIN                = Admin
 RIGHTS.ADMIN_LIST           = Admins
-RIGHTS.INSTRUCTOR           = Dozent
-RIGHTS.INSTRUCTOR_LIST      = Dozenten
+RIGHTS.LECTURER             = Dozent
+RIGHTS.LECTURER_LIST        = Dozenten
 RIGHTS.STUDENT              = Student
 RIGHTS.CAN_EDIT_GROUPS      = darf \u00dcbungsbl\u00e4tter editieren?
 RIGHTS.CAN_EDIT_SCENARIO    = darf Szenario editieren?
 RIGHTS.CAN_ASSERT           = darf Abgaben bewerten?
 RIGHTS.INSERT               = Eintragen
 RIGHTS.INSERT_RIGHTS        = Neue Rechte einrichten
-RIGHTS.INSERT_INSTRUCTOR    = Neuen Dozent hinzuf\u00fcgen
+RIGHTS.INSERT_LECTURER      = Neuen Dozent hinzuf\u00fcgen
 RIGHTS.GIVE_RIGHT           = Privileg geben
 RIGHTS.REMOVE_RIGHT         = Privileg entfernen
 RIGHTS.REMOVE_ALL_RIGHTS    = Alle Privilegien entfernen
 RIGHTS.USER_NOT_FOUND       = Nutzer nicht gefunden
 RIGHTS.SCENARIO_NOT_FOUND   = Szenario existiert nicht, somit k\u00f6nnen \
                               auch keine Rechte vergeben werden
+RIGHTS.DELETE_RIGHTS        = Rechte l\u00f6schen?
 RIGHTS.DELETE_LECTURER      = Dozenten l\u00f6schen?
 RIGHTS.LECTURER_ADDED       = Dozenten erfolgreich hinzugef\u00fcgt
 RIGHTS.LECTURER_REMOVED     = Dozenten erfolgreich gel\u00f6scht.
@@ -582,6 +586,9 @@ RIGHTS.RIGHTS_REMOVED       = Rechte erfolgreich gel\u00f6scht.
 RIGHTS.USER_EXISTS          = Schon vorhanden.
 RIGHTS.GIVEN_BY             = Vergeben von
 RIGHTS.ALREADY_INSERTED     = User "{0}" ist bereits Dozent.
+RIGHTS.ALREADY_INSERTED     = User "{0}" ist bereits Dozent.
+RIGHTS.LECTURER_RIGHTS      = Nutzer mit Dozent-Rechten
+RIGHTS.ADMIN_RIGHTS         = Nutzer mit Admin-Rechten
 
 # SqlQueryComparator
 COMPARATOR.SEMANTIC_ERROR   = Semantischer Fehler
