Performance-Verbesserungen, auf ComboPooledDataSource umgestellt

--- a/src/main/resources/text_de.properties
+++ b/src/main/resources/text_de.properties
@@ -110,6 +110,8 @@ ERROR.IE                    = Der Webbrowser 'Internet Explorer' wird von \
                               unterst\u00fctzt. F\u00fcr eine fehlerfreie \
                               Darstellung werden die Browser 'Firefox', \
                               'Chrome' oder 'Safari' empfohlen.
+ERROR.404                   = Yeah... I'm gonna need you to go ahead and \
+                              find another page - Bill Lumbergh
 
 # ############################################################################
 # intro page (index.xhtml)
@@ -632,4 +634,5 @@ FILTER.DESCRIPTION          = Tabelleneintr\u00e4ge k\u00f6nnen mit diesem Feld 
                               Man kann die Suche jedoch auf einzelne \
                               Spalten beschr\u00e4nken. Syntax: \
                               'Spaltenname=Suchstring'
+
 
