Großes Update, bessere Darstellung der Tabellen, Showcase-Mode, Bugfixes, Performancefixes

--- a/src/main/resources/text_de.properties
+++ b/src/main/resources/text_de.properties
@@ -45,7 +45,7 @@ HEADER.LINK1                = \u00dcbungen
 HEADER.LINK2                = Rechte
 HEADER.LINK3                = Editieren
 HEADER.LINK4                = Bewerten
-HEADER.LOGO_ALT             = Universit\u00e4t W\u00fcrzburg
+HEADER.LOGO_ALT             = Zur\u00fcck zur Startseite
 
 # debug text
 DEBUG.NOT_IMPLEMENTED       = Noch nicht implementiert
@@ -72,6 +72,7 @@ NO                          = Nein
 COPY                        = KOPIE
 SUCCESS                     = Erfolgreich gespeichert
 ERROR                       = Unerwarteter Fehler, siehe Logdatei.
+SHOWCASE_ERROR              = Speichern im Showcase-Modus nicht m\u00f6glich
 FN                          = Spalte f\u00fcr zugeh\u00f6rige Funktionen
 SCENARIO_NOT_FOUND          = FEHLER: Dieses Szenario wurde nicht gefunden.
 
@@ -96,7 +97,7 @@ SESSION.USER                = Angemeldet als:
 # session-errors
 SESSION.ERRORTITLE          = Die Session ist abgelaufen!
 SESSION.ERRORLINE           = Loggen Sie sich \u00fcber Moodle ein.
-SESSION.FALSE               = Session ung\u00fcltig.
+SESSION.FALSE               = Session/Nutzerdaten ung\u00fcltig.
 SESSION.PERMISSION          = Fehlende Rechte
 SESSION.PERMISSION_DETAILS  = Fehlende Rechte. Wenden Sie sich an den Admin.
 
@@ -111,7 +112,7 @@ ERROR.IE                    = Der Webbrowser 'Internet Explorer' wird von \
                               Darstellung werden die Browser 'Firefox', \
                               'Chrome' oder 'Safari' empfohlen.
 ERROR.404                   = Yeah... I'm gonna need you to go ahead and \
-                              find another page - Bill Lumbergh
+                              find another page.
 
 # ############################################################################
 # intro page (index.xhtml)
@@ -146,26 +147,38 @@ AC.SEL_SING                 = gew\u00e4hlte Aufgabe \u00fcben
 AC.SEL_PLUR                 = gew\u00e4hlte Aufgaben \u00fcben
 AC.HELP                     = Hilfe anzeigen
 
-
 # exercise datatable
 EX.NOTFOUND                 = Keine Aufgaben mit dem gegebenen \
                               Suchstring gefunden
 EX.RATED_DATE               = Abgabe bis
 EX.RATED_DESCRIPTION        = Sie k\u00f6nnen beliebig viele Abgaben speichern. \
-                              Nach dem Abgabetermin wird jedoch nur die \
-                              letzte Abgabe gez\u00e4hlt. \
+                              Nach Ablauf des Abgabetermines ({0}) sind jedoch \
+                              keine weiteren Eintr\u00e4ge mehr m\u00f6glich. \
+                              Am Ende wird nur die letzte Abgabe gez\u00e4hlt. \
                               Die letzen Eintr\u00e4ge (soweit vorhanden) k\u00f6nnen \
                               aufgerufen werden, indem man neben der \
-                              Punkteanzeige das Info-Icon anklickt.
-                              Die erreichten Punkte \
+                              Punkteanzeige das Info-Icon ({1}) anklickt.
+EX.RATED_DESCRIPTION_AUTO   = Die erreichten Punkte (hier max. {0}) \
                               k\u00f6nnen nach Ablauf des Abgabetermines \
+                              hier aufgerufen werden.
+EX.RATED_DESCRIPTION_MANUAL = Die erreichten Punkte (hier max. {0}) \
+                              k\u00f6nnen nach der Freischaltung der Bewertung \
                               hier aufgerufen werden.
 EX.RATED_DESCRIPTION2       = Details zu den einzelnen Bewertungen k\u00f6nnen \
                               aufgerufen werden, indem man neben der \
-                              Punkteanzeige das Icon anklickt. \
+                              Punkteanzeige das Icon anklickt:<br/><br/>\
+                              &nbsp;&nbsp; {0} -- alle Punkte erreicht<br/>\
+                              &nbsp;&nbsp; {1} -- fehlerhafte Abgabe<br/>\
+                              &nbsp;&nbsp; {2} -- nicht bearbeitete Aufgabe<br/><br/>\
                               Es sind keine weiteren Abgaben mehr m\u00f6glich. \
                               Sie k\u00f6nnen die Aufgaben jedoch weiterhin \u00fcben.
+EX.RATED_CLOSED             = Ihre Abgabe kann nicht nach dem Abgabetermin \
+                              \u00fcberschrieben werden.
+EX.SERVER_MESSAGE           = Server-Meldung:
+EX.SAVED_SUCCESSFUL         = Ihre Abgabe wurde erfolgreich gespeichert
+EX.OVERWRITING_SUCCESSFUL   = Ihre Abgabe wurde erfolgreich \u00fcberschrieben
 EX.ITS_RATED                = Bewertungen freigeschaltet
+EX.CLOSED                   = [gesperrt]
 
 # columns of exercise datatable
 EX.COL1                     = Nr
@@ -400,14 +413,9 @@ EDIT_GROUP.EMPTY_GROUP      = Name f\u00fcr das \u00dcbungsblatt fehlt!
 EDIT_GROUP.TIME_CONFLICT1   = Die Startzeit muss vor der Endzeit sein
 EDIT_GROUP.TIME_CONFLICT2   = Die Startzeit muss nach folgendem Datum gesetzt werden
 EDIT_GROUP.TIME_CONFLICT3   = Die Endzeit muss nach folgendem Datum gesetzt werden
-
-
-# ############################################################################
-# logout page
-# ############################################################################
-
-# link zum swt-kurs
-SESSION.WUECAMPUS         = https://wuecampus2.uni-wuerzburg.de/moodle/
+EDIT_GROUP.AUTO_RATING_LAB  = Bewertung automatisch nach Endzeit freigeben:
+EDIT_GROUP.AUTO_RATING      = automatisch freigeben
+EDIT_GROUP.NO_AUTO_RATING   = nicht automatisch freigeben
 
 # ############################################################################
 # exercise page - "task.xhtml"
@@ -471,7 +479,7 @@ ASSERTION.SAVE              = Speichern
 ASSERTION.SHOW_DETAILS      = Details einsehen
 ASSERTION.EX                = \u00dcbungsaufgabe
 ASSERTION.EXG               = \u00dcbungsgruppe
-ASSERTION.USER              = Nutzer-WueCampus-ID
+ASSERTION.USER              = Nutzer-Moodle-ID
 ASSERTION.SC                = Szenario
 ASSERTION.SUBMISSIONS       = Abgaben
 ASSERTION.QUERY             = Query
@@ -553,13 +561,17 @@ RIGHTS                      = Benutzer-Privilegien
 RIGHTS.INFO                 = Rechte k\u00f6nnen nur den Nutzern zugewiesen \
                               werden, die sich bereits einmal auf der \
                               Seite angemeldet haben. \
-                              Nutzer mit Admin-Rechten sind die einzigen \
-                              die weitere Rechte vergeben k\u00f6nnen und Szenarien \
-                              l\u00f6schen und erstellen k\u00f6nnen. \
+                              Nutzer mit Admin -oder Dozent-Rechten sind die Einzigen, \
+                              die weitere Rechte vergeben k\u00f6nnen. Neue Szenarien \
+                              k\u00f6nnen jedoch nur von Admins hinzugef\u00fcgt werden. \
+                              <br/><br/> \
                               Nutzer mit Editier-Rechten k\u00f6nnen Szenarien, \
                               Aufgabenbl\u00e4tter und Aufgaben bearbeiten. \
                               Die beiden letzteren k\u00f6nnen sie auch l\u00f6schen \
-                              und hinzuf\u00fcgen.
+                              und hinzuf\u00fcgen. <br/>\
+                              Dozenten k\u00f6nnen nur Rechte f\u00fcr Szenarien festlegen, die \
+                              vorher von einem Admin in die obere Liste eingetragen wurden.
+
 RIGHTS.NOTFOUND             = Keine Privilegien vergeben.
 RIGHTS.USER                 = Benutzer
 RIGHTS.ISADMIN              = ist Admin?
