Fixed CSV export, fixed drop-down menus, fixed scenario export, added progressbar for 'Bewerten'-menu and some minor bugfixes

--- a/src/main/resources/text_de.properties
+++ b/src/main/resources/text_de.properties
@@ -538,7 +538,7 @@ ASSERTION.PERF_ERROR        = Nicht alle Eintr\u00e4ge f\u00fcr den gew\u00e4hlt
                               konnten gezeigt werden (zu viele Daten). \
                               F\u00fcr bessere Ergebnisse grenzen Sie die \
                               Filter besser ein.
-ASSERTION.DIALOG_LOADING    = Dies kann eine Weile dauern!
+ASSERTION.DIALOG_LOADING    = Dies kann eine Weile dauern.
 
 # Submission Save-Dialog
 SAVED.SUCCESS               = Erfolgreich gespeichert
@@ -560,7 +560,7 @@ EXECUTER.TABLE_NOTFOUND     = Die Tabelle '%' existiert nicht!
 RIGHTS                      = Benutzer-Privilegien
 RIGHTS.INFO                 = Rechte k\u00f6nnen nur den Nutzern zugewiesen \
                               werden, die sich bereits einmal auf der \
-                              Seite angemeldet haben. \
+                              Seite (\u00fcber Moodle) angemeldet haben. \
                               Nutzer mit Admin -oder Dozent-Rechten sind die Einzigen, \
                               die weitere Rechte vergeben k\u00f6nnen. Neue Szenarien \
                               k\u00f6nnen jedoch nur von Admins hinzugef\u00fcgt werden. \
