--- a/src/main/resources/text_de.properties
+++ b/src/main/resources/text_de.properties
@@ -111,7 +111,7 @@ ERROR.IE                    = Der Webbrowser 'Internet Explorer' wird von \
                               unterst\u00fctzt. F\u00fcr eine fehlerfreie \
                               Darstellung werden die Browser 'Firefox', \
                               'Chrome' oder 'Safari' empfohlen.
-ERROR.404                   = Yeah... I'm gonna need you to go ahead and \
+ERROR.404                   = Yeah... I`m gonna need you to go ahead and \
                               find another page.
 
 # ############################################################################
