--- a/src/main/resources/text_de.properties
+++ b/src/main/resources/text_de.properties
@@ -327,7 +327,7 @@ EDIT_SC.ERROR_DETAILS       = Details zum Fehler
 EDIT_SC.RIGHTS              = Datenbank-Rechte
 EDIT_SC.LAST_MOD            = Zuletzt bearbeitet
 EDIT_SC.DESC                = Beschreibung
-EDIT_SC.NAME                = Szenarien-Name
+EDIT_SC.NAME                = Szenario-Name
 EDIT_SC.DB_HOST             = Datenbank-Host/IP
 EDIT_SC.DB_PORT             = Datenbank-Port
 EDIT_SC.DB_NAME             = Datenbank-Name
@@ -351,7 +351,7 @@ EDIT_SC.TIME_TOOLTIP        = Wenn eine Start- oder Endzeit festgelegt wird, \
                               f\u00fcr die Studenten zug\u00e4nglich. Nutzern mit \
                               Bewertungs- oder Bearbeitungsrechten sind \
                               diese Bereiche auch weiterhin zug\u00e4nglich.
-EDIT_SC.EMPTY_NAME          = Szenarien-Name ist leer!
+EDIT_SC.EMPTY_NAME          = Szenario-Name ist leer!
 EDIT_SC.EMPTY_DESCRIPTION   = Beschreibung ist leer!
 EDIT_SC.EMPTY_DBHOST        = Host/IP-Feld ist leer!
 EDIT_SC.EMPTY_DBPORT        = DB-Port-Feld ist leer!
@@ -562,14 +562,14 @@ RIGHTS.INFO                 = Rechte k\u00f6nnen nur den Nutzern zugewiesen \
                               werden, die sich bereits einmal auf der \
                               Seite (\u00fcber Moodle) angemeldet haben. \
                               Nutzer mit Admin -oder Dozent-Rechten sind die Einzigen, \
-                              die weitere Rechte vergeben k\u00f6nnen. Neue Szenarien \
+                              die weitere Rechte vergeben k\u00f6nnen. Neue Szenarios \
                               k\u00f6nnen jedoch nur von Admins hinzugef\u00fcgt werden. \
                               <br/><br/> \
-                              Nutzer mit Editier-Rechten k\u00f6nnen Szenarien, \
+                              Nutzer mit Editier-Rechten k\u00f6nnen Szenarios, \
                               Aufgabenbl\u00e4tter und Aufgaben bearbeiten. \
                               Die beiden letzteren k\u00f6nnen sie auch l\u00f6schen \
                               und hinzuf\u00fcgen. <br/>\
-                              Dozenten k\u00f6nnen nur Rechte f\u00fcr Szenarien festlegen, die \
+                              Dozenten k\u00f6nnen nur Rechte f\u00fcr Szenarios festlegen, die \
                               vorher von einem Admin in die obere Liste eingetragen wurden.
 
 RIGHTS.NOTFOUND             = Keine Privilegien vergeben.
