'Dozent'-role added for showcase-mode and some minor bugfixes

--- a/src/main/resources/text_de.properties
+++ b/src/main/resources/text_de.properties
@@ -73,6 +73,8 @@ COPY                        = KOPIE
 SUCCESS                     = Erfolgreich gespeichert
 ERROR                       = Unerwarteter Fehler, siehe Logdatei.
 SHOWCASE_ERROR              = Speichern im Showcase-Modus nicht m\u00f6glich
+SHOWCASE_ERROR_2            = Diser Eintrag l\u00e4sst sich im Showcase-Modus \
+                              nicht ver\u00e4ndern
 FN                          = Spalte f\u00fcr zugeh\u00f6rige Funktionen
 SCENARIO_NOT_FOUND          = FEHLER: Dieses Szenario wurde nicht gefunden.
 
