--- a/src/main/resources/text_de.properties
+++ b/src/main/resources/text_de.properties
@@ -67,6 +67,8 @@ DELETE                      = L\u00f6schen
 CANCEL                      = Abbrechen
 RATED                       = bewertet
 UNRATED                     = unbewertet
+LOGOUT                      = Abmelden
+HIDE                        = verstecken
 YES                         = Ja
 NO                          = Nein
 COPY                        = KOPIE
