README.md-update

--- a/src/main/resources/text_de.properties
+++ b/src/main/resources/text_de.properties
@@ -598,6 +598,8 @@ RIGHTS.SCENARIO_NOT_FOUND   = Szenario existiert nicht, somit k\u00f6nnen \
                               auch keine Rechte vergeben werden
 RIGHTS.DELETE_RIGHTS        = Rechte l\u00f6schen?
 RIGHTS.DELETE_LECTURER      = Dozenten l\u00f6schen?
+RIGHTS.DELETE_LECTURER_DESC = Alle verbundenen Rechteeintr\u00e4ge werden \
+                              ebenfalls gel\u00f6scht
 RIGHTS.LECTURER_ADDED       = Dozenten erfolgreich hinzugef\u00fcgt
 RIGHTS.LECTURER_REMOVED     = Dozenten erfolgreich gel\u00f6scht.
 RIGHTS.RIGHTS_REMOVED       = Rechte erfolgreich gel\u00f6scht.
