--- a/src/main/resources/text_de.properties
+++ b/src/main/resources/text_de.properties
@@ -79,6 +79,8 @@ SHOWCASE_ERROR_2            = Diser Eintrag l\u00e4sst sich im Showcase-Modus \
                               nicht ver\u00e4ndern
 FN                          = Spalte f\u00fcr zugeh\u00f6rige Funktionen
 SCENARIO_NOT_FOUND          = FEHLER: Dieses Szenario wurde nicht gefunden.
+ONLINE_COUNTER              = ONLINE:
+SESSION_COUNTER             = SESSION:
 
 # ############################################################################
 # error messages
@@ -286,7 +288,7 @@ EDIT_EX.LINK                = Link
 # edit scenario page - "edit_scenario.xhtml"
 # ############################################################################
 
-EDIT_SC.DESCRIPTION_TITLE   = Datenbank-Rechte Skript. Die Studenten sollten \
+EDIT_SC.DESCRIPTION_TITLE   = Die Studenten sollten \
                               \u00fcber einen Datenbank-Nutzer \u00fcben, der nur \
                               beschr\u00e4nkte Rechte besitzt. Daf\u00fcr wird das \
                               folgendes Skript bereitgestellt:<br/><br/>\
@@ -320,7 +322,7 @@ EDIT_SC.DROP_USER           = REVOKE ALL PRIVILEGES, \
                               GRANT OPTION FROM '<b>user_name</b>'@'<b>db_host</b>'; DROP USER \
                               '<b>user_name</b>'@'<b>db_host</b>';
 EDIT_SC.SAVE_TOOLTIP        = Nach dem Absenden findet ein \
-                              DB-Verbindungstest statt. Es wird jedoch nicht \
+                              Verbindungstest zum DB-Server statt. Es wird jedoch nicht \
                               gepr\u00fcft, ob der Nutzer nur eingeschr\u00e4nkte \
                               Rechte hat.
 EDIT_SC.ADD_DIA             = Diagram f\u00fcr das Szenario hinzuf\u00fcgen \
@@ -442,6 +444,8 @@ QUE.LAST                    = Letzter Eintrag
 QUE.LAST_TIME               = Zeit
 QUE.QUERY_SAVED             = Ihre L\u00f6sung wurde gespeichert
 QUE.CORRECT_QUERY           = Musterl\u00f6sung
+QUE.CORRECT_QUERY_2         = Musterl\u00f6sung (nur f\u00fcr Sie sichtbar, \
+                              selektieren zum anzeigen)
 QUE.USER_QUERY              = Ihre L\u00f6sung
 QUE.ORIGINAL_ERROR          = Originale SQL-Meldung
 QUE.GOTO_LIST               = Aktuelle Liste \u00fcben
@@ -459,6 +463,9 @@ QUE.CUSTOM_MYSQL            = \u00d6ffnet die MySQL-Dokumentation in einem \
 QUE.UNEXPECTED_ERROR        = Unerwarteter Fehler
 QUE.UNEXPECTED_ERROR2       = M\u00f6glicherweise stimmt die Musterl\u00f6sung \
                               nicht mit den aktuellen Tabellen \u00fcberein
+QUE.CLOSE_WINDOW            = Fenster schlie\u00dfen
+QUE.CLOSE_ALL_WINDOW        = Alle Fenster schlie\u00dfen
+QUE.NEW_TAB                 = Dieses Bild in einem neuen Tab \u00f6ffnen.
 
 # ############################################################################
 # Submissions
