Minor frontend corrections

--- a/src/main/resources/text_de.properties
+++ b/src/main/resources/text_de.properties
@@ -79,8 +79,8 @@ SHOWCASE_ERROR_2            = Diser Eintrag l\u00e4sst sich im Showcase-Modus \
                               nicht ver\u00e4ndern
 FN                          = Spalte f\u00fcr zugeh\u00f6rige Funktionen
 SCENARIO_NOT_FOUND          = FEHLER: Dieses Szenario wurde nicht gefunden.
-ONLINE_COUNTER              = ONLINE:
-SESSION_COUNTER             = SESSION:
+ONLINE_COUNTER              = Anzahl eingeloggter Nutzer:
+SESSION_COUNTER             = Logout in:
 
 # ############################################################################
 # error messages
@@ -445,7 +445,7 @@ QUE.LAST_TIME               = Zeit
 QUE.QUERY_SAVED             = Ihre L\u00f6sung wurde gespeichert
 QUE.CORRECT_QUERY           = Musterl\u00f6sung
 QUE.CORRECT_QUERY_2         = Musterl\u00f6sung (nur f\u00fcr Sie sichtbar, \
-                              selektieren zum anzeigen)
+                              selektieren zum Anzeigen)
 QUE.USER_QUERY              = Ihre L\u00f6sung
 QUE.ORIGINAL_ERROR          = Originale SQL-Meldung
 QUE.GOTO_LIST               = Aktuelle Liste \u00fcben
